--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
     </style>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -64,14 +64,15 @@
             <div class="col-lg-12">
                 <img class="img-fluid rounded mb-4 mb-lg-0" src="http://placehold.it/900x400" alt="">
             </div>
-            <div class="col-lg-12">
 
+            <div class="col-lg-12">
+                <h2 style="font-family: 'Oswald';">DOMO DOBI</h2>
                 <ul class="nav nav-pills nav-fill mb-3" id="pills-tab" role="tablist">
-                    <li class="nav-item" role="presentation">
-                        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Home</a>
+                    <li class="nav-item" role="presentation" style="border-radius:0;border:solid white 1px;">
+                        <a class="nav-link bg-info active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">📋 Order History</a>
                     </li>
-                    <li class="nav-item" role="presentation">
-                        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Profile</a>
+                    <li class="nav-item" role="presentation" style="border-radius:0;border:solid white 1px;">
+                        <a class="nav-link bg-info" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">🛒 My Cart</a>
                     </li>
 
                 </ul>
@@ -154,11 +155,11 @@
 
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-light">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+            <p class="m-0 text-center text-dark">Copyright &copy; DOMO DOBI</p>
         </div>
-        <!-- /.container -->
+
     </footer>
 
     <!-- Bootstrap core JavaScript -->
