--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="card">
                     <div class="card-horizontal">
                         <div class="img-square-wrapper">
-                            <img class="img-card" src="/img/Frame 1 (1).jpg" alt="Card image cap">
+                            <img class="img-card" src="/img/Frame1.jpg" alt="Card image cap">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">MEN’S WEAR</h5>
@@ -121,7 +121,7 @@
                 <div class="card">
                     <div class="card-horizontal">
                         <div class="img-square-wrapper">
-                            <img class="img-card" src="/img/Frame 1 (2).jpg" alt="Card image cap">
+                            <img class="img-card" src="/img/Frame2.jpg" alt="Card image cap">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title">WOMEN’S WEAR</h5>
@@ -138,7 +138,7 @@
         <div class="card">
             <div class="card-horizontal">
                 <div class="img-square-wrapper">
-                    <img class="img-card" src="img/Frame 1 (3).jpg" alt="Card image cap">
+                    <img class="img-card" src="img/Frame3.jpg" alt="Card image cap">
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">LINEN</h5>
