--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
             .img-card {
                 width: 100px;
             }
+
+            .card {
+                margin-bottom:0.3em;
+                
+            }
+            .card:hover {
+                margin-bottom: 0.5em;
+                box-shadow: 0px 2px 5px 0px #117a8b75;
+            }
         </style>
         <div class="row">
             <div class="col-lg-12">
