--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <!-- Heading Row -->
         <div class="row align-items-center my-5">
             <div class="col-lg-12">
-                <img class="img-fluid rounded mb-4 mb-lg-0" src="img/banner-1.jpg" alt="">
+                <img src="img/banner-1.jpg" width="100%" class="img-fluid rounded" alt="Responsive image">
             </div>
 
             <div class="col-lg-12">
@@ -110,7 +110,7 @@
                 box-shadow: 0px 2px 5px 0px #117a8b75;
             }
         </style>
-        
+
         <div class="row">
             <div class="col-lg-12">
                 <div class="card">
