--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
             .card {
                 margin-bottom:0.3em;
+                transition: box-shadow 0.5s;
                 
             }
             .card:hover {
