--- a/index.html
+++ b/index.html
@@ -68,31 +68,16 @@
 
             <div class="col-lg-12">
                 <h2 style="font-family: 'Oswald';">DOMO DOBI</h2>
-                <ul class="nav nav-pills nav-fill mb-3" id="pills-tab" role="tablist">
-                    <li class="nav-item" role="presentation" style="border-radius:0;border:solid white 1px;">
-                        <a class="nav-link bg-info active" id="pills-home-tab" data-toggle="pill" href="#pills-home"
-                            role="tab" aria-controls="pills-home" aria-selected="true">📋 Order History</a>
+                <ul class="nav nav-pills nav-fill" >
+                    <li class="nav-item">
+                      <a class="nav-link active bg-info text-light"style="border:1px white solid"  href="#">📋 Order History</a>
                     </li>
-                    <li class="nav-item" role="presentation" style="border-radius:0;border:solid white 1px;">
-                        <a class="nav-link bg-info" id="pills-profile-tab" data-toggle="pill" href="#pills-profile"
-                            role="tab" aria-controls="pills-profile" aria-selected="false">🛒 My Cart</a>
+                    <li class="nav-item">
+                      <a class="nav-link bg-info text-light" style="border:1px white solid" href="#">🛒 My Cart</a>
                     </li>
-
                 </ul>
-                <div class="tab-content" id="pills-tabContent">
-                    <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
-                        aria-labelledby="pills-home-tab">
-                        This is a template that is great for small businesses. It doesn't have too much fancy flare to
-                        it, but it makes a great use of the standard Bootstrap core components. Feel free to use this
-                        template for any project you want!</div>
-                    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-                        This is a template that is great for small businesses. It doesn't have too much fancy flare to
-                        it, but it makes a great use of the standard Bootstrap core components. Feel free to use this
-                        template for any project you want!</div>
-
-                </div>
             </div>
-            <!-- /.col-lg-8 -->
+            <!-- /.col-lg-12 -->
 
         </div>
         <!-- /.row -->
@@ -194,12 +179,12 @@
     <!-- Card Modal Element-->
     <style>
         .modal-dialog {
-    position: relative;
-    width: auto;
-    margin: 0rem;
-    height: 100%;
-    pointer-events: none;
-}
+            position: relative;
+            width: auto;
+            margin: 0rem;
+            height: 100%;
+            pointer-events: none;
+        }
     </style>
     <div class="modal fade modal-lg " id="modalMen" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
