--- a/index.html
+++ b/index.html
@@ -61,19 +61,20 @@
     <div class="container">
 
         <!-- Heading Row -->
-        <div class="row align-items-center my-5">
+        <div class="row align-items-center my-2">
             <div class="col-lg-12">
-                <img src="img/banner-1.jpg" width="100%" class="img-fluid rounded" alt="Responsive image">
+                <img src="img/banner-1.jpg" width="100%" class="img-fluid rounded mt-5" alt="Responsive image">
             </div>
 
             <div class="col-lg-12">
                 <h2 style="font-family: 'Oswald';">DOMO DOBI</h2>
-                <ul class="nav nav-pills nav-fill" >
+                <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
-                      <a class="nav-link active bg-info text-light"style="border:1px white solid"  href="#">📋 Order History</a>
+                        <a class="nav-link active bg-info text-light" style="border:1px white solid" href="#">📋 Order
+                            History</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link bg-info text-light" style="border:1px white solid" href="#">🛒 My Cart</a>
+                        <a class="nav-link bg-info text-light" style="border:1px white solid" href="#">🛒 My Cart</a>
                     </li>
                 </ul>
             </div>
@@ -131,37 +132,43 @@
                     </div>
                 </a>
 
-                <div class="card">
-                    <div class="card-horizontal">
-                        <div class="img-square-wrapper">
-                            <img class="img-card" src="img/Frame2.jpg" alt="Card image cap">
+                <a data-toggle="modal" data-target="#modalMen">
+                    <div class="card">
+                        <div class="card-horizontal">
+                            <div class="img-square-wrapper">
+                                <img class="img-card" src="img/Frame2.jpg" alt="Card image cap">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">WOMEN’S WEAR</h5>
+                                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                            </div>
                         </div>
-                        <div class="card-body">
-                            <h5 class="card-title">WOMEN’S WEAR</h5>
-                            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                        </div>
-                    </div>
-                    <!-- <div class="card-footer">
+                        <!-- <div class="card-footer">
                         <small class="text-muted">Last updated 3 mins ago</small>
                     </div> -->
-                </div>
+                    </div>
+                </a>
+
+                <a data-toggle="modal" data-target="#modalMen">
+                    <div class="card">
+                        <div class="card-horizontal">
+                            <div class="img-square-wrapper">
+                                <img class="img-card" src="img/Frame3.jpg" alt="Card image cap">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">LINEN</h5>
+                                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                            </div>
+                        </div>
+                        <!-- <div class="card-footer">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </div> -->
+                    </div>
+                </a>
             </div>
         </div>
 
-        <div class="card">
-            <div class="card-horizontal">
-                <div class="img-square-wrapper">
-                    <img class="img-card" src="img/Frame3.jpg" alt="Card image cap">
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">LINEN</h5>
-                    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                </div>
-            </div>
-            <!-- <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-            </div> -->
-        </div>
+
 
     </div>
     <!-- /.container -->
@@ -179,11 +186,14 @@
     <!-- Card Modal Element-->
     <style>
         .modal-dialog {
-            position: relative;
-            width: auto;
-            margin: 0rem;
-            height: 100%;
-            pointer-events: none;
+            margin: 0 !important;
+        }
+
+        @media (min-width: 576px) {
+            .modal-dialog {
+                max-width: none;
+                margin: 1.75rem auto;
+            }
         }
     </style>
     <div class="modal fade modal-lg " id="modalMen" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -207,7 +217,7 @@
         </div>
     </div>
 
-    <!-- Bootstrap core JavaScript -->
+    <!-- Bootstrap core JavaScript -->P
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
