--- a/index.html
+++ b/index.html
@@ -1,226 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+    <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-    <title>DOMO DOBI</title>
+        <title>DOMO DOBI</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+        <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link
+        href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/small-business.css" rel="stylesheet">
+        <!-- Custom styles for this template -->
+        <link href="css/small-business.css" rel="stylesheet">
 
-</head>
+    </head>
 
-<body>
-    <style>
-        .navbar-toggle.navbar-left {
-            float: left;
-            margin-left: 10px;
-        }
-    </style>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-
-            </button>
-
-            <a class="navbar-brand" href="#">DOMO DOBI</a>
-            <div class="collapse navbar-left navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">🛒</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Page Content -->
-    <div class="container">
-
-        <!-- Heading Row -->
-        <div class="row align-items-center my-2">
-            <div class="col-lg-12">
-                <img src="img/banner-1.jpg" width="100%" class="img-fluid rounded mt-5" alt="Responsive image">
-            </div>
-
-            <div class="col-lg-12">
-                <h2 style="font-family: 'Oswald';">DOMO DOBI</h2>
-                <ul class="nav nav-pills nav-fill">
-                    <li class="nav-item">
-                        <a class="nav-link active bg-info text-light" style="border:1px white solid" href="#">📋 Order
-                            History</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link bg-info text-light" style="border:1px white solid" href="#">🛒 My Cart</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.col-lg-12 -->
-
-        </div>
-        <!-- /.row -->
-
+    <body>
         <style>
-            .card-horizontal {
-                display: flex;
-                flex: 1 1 auto;
-            }
-
-            .img-card {
-                width: 100px;
-            }
-
-            .card {
-                margin-bottom: 0.3em;
-                /* transition: box-shadow 0.5s; */
-
-            }
-
-            .card:hover {
-                margin-bottom: 0.5em;
-                /* box-shadow: 0px 2px 5px 0px #117a8b75; */
-            }
-
-            a.card {
-                text-decoration: none;
-            }
-
-            a.card:hover {
-                text-decoration: none;
+            .navbar-toggle.navbar-left {
+                float: left;
+                margin-left: 10px;
             }
         </style>
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
 
-        <div class="row">
-            <div class="col-lg-12">
-                <a data-toggle="modal" data-target="#modalMen">
-                    <div class="card">
-                        <div class="card-horizontal">
-                            <div class="img-square-wrapper">
-                                <img class="img-card" src="img/Frame1.jpg" alt="Card image cap">
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">MEN’S WEAR</h5>
-                                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                            </div>
-                        </div>
-                        <!-- <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div> -->
-                    </div>
-                </a>
+                </button>
 
-                <a data-toggle="modal" data-target="#modalMen">
-                    <div class="card">
-                        <div class="card-horizontal">
-                            <div class="img-square-wrapper">
-                                <img class="img-card" src="img/Frame2.jpg" alt="Card image cap">
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">WOMEN’S WEAR</h5>
-                                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                            </div>
-                        </div>
-                        <!-- <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div> -->
-                    </div>
-                </a>
-
-                <a data-toggle="modal" data-target="#modalMen">
-                    <div class="card">
-                        <div class="card-horizontal">
-                            <div class="img-square-wrapper">
-                                <img class="img-card" src="img/Frame3.jpg" alt="Card image cap">
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">LINEN</h5>
-                                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                            </div>
-                        </div>
-                        <!-- <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                        </div> -->
-                    </div>
-                </a>
+                <a class="navbar-brand" href="#">DOMO DOBI</a>
+                <div class="collapse navbar-left navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">🛒</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </nav>
+
+        <!-- Page Content -->
+        <div
+            class="container">
+
+            <!-- Heading Row -->
+            <div class="row align-items-center my-2">
+                <div class="col-lg-12">
+                    <img src="img/banner-1.jpg" width="100%" class="img-fluid rounded mt-5" alt="Responsive image">
+                </div>
+
+                <div class="col-lg-12">
+                    <h2 style="font-family: 'Oswald';">DOMO DOBI</h2>
+                    <ul class="nav nav-pills nav-fill">
+                        <li class="nav-item">
+                            <a class="nav-link active bg-info text-light" style="border:1px white solid" href="#">📋 Order
+                                                            History</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link bg-info text-light" style="border:1px white solid" href="#">🛒 My Cart</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.col-lg-12 -->
+
+            </div>
+            <!-- /.row -->
+
+            <style>
+                .card-horizontal {
+                    display: flex;
+                    flex: 1 1 auto;
+                }
+
+                .img-card {
+                    width: 100px;
+                }
+
+                .card {
+                    margin-bottom: 0.3em;
+                    /* transition: box-shadow 0.5s; */
+
+                }
+
+                .card:hover {
+                    margin-bottom: 0.5em;
+                    /* box-shadow: 0px 2px 5px 0px #117a8b75; */
+                }
+
+                a.card {
+                    text-decoration: none;
+                }
+
+                a.card:hover {
+                    text-decoration: none;
+                }
+            </style>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <a data-toggle="modal" data-target="#modalMen">
+                        <div class="card">
+                            <div class="card-horizontal">
+                                <div class="img-square-wrapper">
+                                    <img class="img-card" src="img/Frame1.jpg" alt="Card image cap">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">MEN’S WEAR</h5>
+                                    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                                </div>
+                            </div>
+                            <!-- <div class="card-footer">
+                                                    <small class="text-muted">Last updated 3 mins ago</small>
+                                                </div> -->
+                        </div>
+                    </a>
+
+                    <a data-toggle="modal" data-target="#modalMen">
+                        <div class="card">
+                            <div class="card-horizontal">
+                                <div class="img-square-wrapper">
+                                    <img class="img-card" src="img/Frame2.jpg" alt="Card image cap">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">WOMEN’S WEAR</h5>
+                                    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                                </div>
+                            </div>
+                            <!-- <div class="card-footer">
+                                                    <small class="text-muted">Last updated 3 mins ago</small>
+                                                </div> -->
+                        </div>
+                    </a>
+
+                    <a data-toggle="modal" data-target="#modalMen">
+                        <div class="card">
+                            <div class="card-horizontal">
+                                <div class="img-square-wrapper">
+                                    <img class="img-card" src="img/Frame3.jpg" alt="Card image cap">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">LINEN</h5>
+                                    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
+                                </div>
+                            </div>
+                            <!-- <div class="card-footer">
+                                                        <small class="text-muted">Last updated 3 mins ago</small>
+                                                    </div> -->
+                        </div>
+                    </a>
+                </div>
+            </div>
+
         </div>
+        <!-- /.container -->
 
+        <!-- Footer -->
+        <footer class="py-5 bg-light">
+            <div class="container">
+                <p class="m-0 text-center text-dark">Copyright &copy; DOMO DOBI</p>
+            </div>
 
+        </footer>
 
-    </div>
-    <!-- /.container -->
-
-
-
-    <!-- Footer -->
-    <footer class="py-5 bg-light">
-        <div class="container">
-            <p class="m-0 text-center text-dark">Copyright &copy; DOMO DOBI</p>
-        </div>
-
-    </footer>
-
-    <!-- Card Modal Element-->
-    <style>
-        .modal-dialog {
-            margin: 0 !important;
-        }
-
-        @media (min-width: 576px) {
+        <!-- Card Modal Element-->
+        <style>
             .modal-dialog {
-                max-width: none;
-                margin: 1.75rem auto;
+                margin: 0 !important;
             }
-        }
-    </style>
-    <div class="modal fade modal-lg " id="modalMen" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header bg-info text-light">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-info">Save changes</button>
+
+            @media(min-width: 576px) {
+                .modal-dialog {
+                    max-width: none;
+                    margin: 1.75rem auto;
+                }
+            }
+        </style>
+        <div class="modal fade modal-lg " id="modalMen" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header bg-info text-light">
+                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        ...
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-info">Save changes</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- Bootstrap core JavaScript -->P
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <!-- Bootstrap core JavaScript -->
+        P
+        <script src="vendor/jquery/jquery.min.js"></script>
+        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-</body>
+    </body>
 
 </html>
