--- a/loading.html
+++ b/loading.html
@@ -18,8 +18,8 @@
     <link href="css/small-business.css" rel="stylesheet">
     <style>
         body {
-            background: url(/img/inprogress.jpg);
-            /* background-color: #7FD8F8; */
+            background: url(./img/inprogress.jpg);
+            background-color: #7FD8F8;
             background-size: cover;
             background-repeat: no-repeat;
         }
