--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                             </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#">Contact Us</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Services</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#">🛒</a>
+                        <a class="nav-link" href="#">🛒 Cart</a>
                     </li>
                 </ul>
             </div>
