--- a/order.html
+++ b/order.html
@@ -62,7 +62,7 @@
         <!-- Heading Row -->
         <div class="row align-items-center my-2">
             <div class="col-lg-12">
-                <img src="/img/image8.png" width="100%" class="img-fluid rounded mt-5" alt="Responsive image">
+                <img src="img/image8.png" width="100%" class="img-fluid rounded mt-5" alt="Responsive image">
             </div>
 
             <div class="col-lg-12">
