--- a/order.html
+++ b/order.html
@@ -113,7 +113,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <a data-toggle="modal" data-target="#modalMen">
+                <a data-toggle="modal" data-target="#modalMen2">
                     <div class="card">
                         <div class="card-horizontal">
                             <div class="img-square-wrapper">
@@ -130,7 +130,7 @@
                     </div>
                 </a>
 
-                <a data-toggle="modal" data-target="#modalMen">
+                <a data-toggle="modal" data-target="#modalMen2">
                     <div class="card">
                         <div class="card-horizontal">
                             <div class="img-square-wrapper">
@@ -147,7 +147,7 @@
                     </div>
                 </a>
 
-                <a data-toggle="modal" data-target="#modalMen">
+                <a data-toggle="modal" data-target="#modalMen2">
                     <div class="card">
                         <div class="card-horizontal">
                             <div class="img-square-wrapper">
@@ -190,7 +190,7 @@
             }
         }
     </style>
-    <div class="modal fade modal-lg " id="modalMen" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade modal-lg " id="modalMen2" tabindex="-1" role="dialog" aria-labelledby="exampleModalmanLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header bg-info text-light">
