--- a/index.html
+++ b/index.html
@@ -111,9 +111,14 @@
             }
         </style>
 
+        <script>
+            function bomOrder() {
+                location.href = "./order.html";
+            }
+        </script>
         <div class="row">
             <div class="col-lg-12">
-                <a data-toggle="modal" data-target="#modalMen">
+                <a onclick="bomOrder()">
                     <div class="card">
                         <div class="card-horizontal">
                             <div class="img-square-wrapper">
@@ -130,7 +135,7 @@
                     </div>
                 </a>
 
-                <a data-toggle="modal" data-target="#modalMen">
+                <a onclick="bomOrder()">
                     <div class="card">
                         <div class="card-horizontal">
                             <div class="img-square-wrapper">
@@ -147,7 +152,7 @@
                     </div>
                 </a>
 
-                <a data-toggle="modal" data-target="#modalMen">
+                <a onclick="bomOrder()">
                     <div class="card">
                         <div class="card-horizontal">
                             <div class="img-square-wrapper">
