--- a/order.html
+++ b/order.html
@@ -27,6 +27,11 @@
         }
     </style>
     <!-- Navigation -->
+    <script>
+        function bomIndex() {
+            location.href = "index.html";
+        }
+    </script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">🡠LAUNDRY</a>
