--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <script>
             function bomOrder() {
-                location.href = "./order.html";
+                location.replace = "./order.html";
             }
         </script>
         <div class="row">
