--- a/order.html
+++ b/order.html
@@ -29,7 +29,7 @@
     <!-- Navigation -->
     <script>
         function bomIndex() {
-            location.href = "index.html";
+            location.replace = "index.html";
         }
     </script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top">
