order need to replace

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 
         <script>
             function bomOrder() {
-                location.replace("./order.html");
-                // location.href = "./order.html";
+                // location.replace("./order.html");
+                location.href = "./order.html";
             }
         </script>
         <div class="row">
