--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" type="button" data-toggle="modal" data-target="#modalContact">Contact Us</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Services</a>
@@ -235,6 +235,26 @@
             <div class="modal-body" style="height:700px">
                 <div class="embed-responsive embed-responsive-16by9" style="height:500px">
                     <iframe class="embed-responsive-item" src="./history.html"></iframe>
+                </div>
+            </div>
+            <!-- <div class="modal-footer" style="background-color: white;">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-info">Save changes</button>
+            </div> -->
+        </div>
+    </div>
+    <div class="modal fade modal-lg " id="modalContact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <!-- <div class="modal-header bg-info text-light">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button> -->
+            </div>
+            <div class="modal-body" style="height:800px">
+                <div class="embed-responsive embed-responsive-16by9" style="height:500px">
+                    <<iframe class="embed-responsive-item" src="./contact.html"></iframe>>
                 </div>
             </div>
             <!-- <div class="modal-footer" style="background-color: white;">
