--- a/order.html
+++ b/order.html
@@ -304,7 +304,7 @@
                         </button>
                 </div>
                 <div class="modal-body">
-                    Add to cart Successful
+                    <p>Add to cart Successful</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
