--- a/order.html
+++ b/order.html
@@ -304,7 +304,10 @@
                         </button>
                 </div>
                 <div class="modal-body">
-                    <p>Add to cart Successful</p>
+                    <div class="container">
+                        <p>Add to cart Successful</p>
+                    </div>
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
